--- a/R-P.css
+++ b/R-P.css
@@ -14,6 +14,8 @@ body
     background: #cbcecb;
     border-radius: 10px;
     max-width: 3000px;
+    overflow-y: auto;
+    max-height: 100vh;
   }
 .form {
   display: flex;
@@ -156,6 +158,26 @@ body
 }
 .checkout:active {
   transform: scale(0.95);
+}
+
+#regresarButton {
+  height: 40px;
+  width: 200px;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 18px;
+  letter-spacing: 0.05em;
+  border-radius: 0.8em;
+  border: none;
+  color: rgb(255, 255, 255);
+  overflow: hidden;
+  position: relative;
+  transition: color 0.6s;
+  background: #38c71b;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  left: 1100px;
 }
 
 
