--- a/Estilo-L-P.css
+++ b/Estilo-L-P.css
@@ -93,7 +93,7 @@ flex-grow: 1;
 margin-left: 10px;
 }
 .app-icon {
-width: 26px;
+width: 20px;
 height: 2px;
 border-radius: 4px;
 background-color: var(--main-color);
@@ -134,7 +134,7 @@ align-items: center;
 }
 .search-wrapper {
 border-radius: 20px;
-background-color: var(--search-area-bg);
+background-color: #1adb00;
 padding-right: 12px;
 height: 40px;
 display: flex;
@@ -156,7 +156,7 @@ outline: none;
 height: 100%;
 padding: 0 20px;
 font-size: 16px;
-background-color: var(--search-area-bg);
+background: linear-gradient(to right, #bff5c1, #48d635); /* Degradado horizontal */
 color: var(--main-color);
 }
 .search-input:placeholder {
