--- a/2-LobbyPaciente.css
+++ b/2-LobbyPaciente.css
@@ -789,3 +789,25 @@ right: 2px;
 top: 10px;
 }
 }
+
+
+.diagnostico-container {
+    background-color: #b2ffb2;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.progress-bar {
+    width: 100%;
+    background-color: #e0e0e0;
+    border-radius: 10px;
+    height: 20px;
+    margin-top: 10px;
+}
+
+.progress {
+    height: 20px;
+    background-color: #4caf50;
+    border-radius: 10px;
+}
